src/LuckyDraw V1.0/src/objects/Charket__WeChatTranscript__c.object
<CustomObject>
    <fields>
        <fullName>Charket__AgentMessageCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Agent Message Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__AgentNotifiedTime__c</fullName>
        <label>Agent Notified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__AverageResponseTimeAgent__c</fullName>
        <label>Average Response Time Agent (Seconds)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__AverageResponseTimeFollower__c</fullName>
        <label>Average Response Time Follower (Seconds)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__ChatDuration__c</fullName>
        <formula>(Charket__EndTime__c - Charket__StartTime__c) * 24 * 60 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chat Duration (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__Content__c</fullName>
        <label>Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Charket__DeliveredMethod__c</fullName>
        <label>Delivered Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Mass</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__EmailNotifiedTime__c</fullName>
        <label>Email Notified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__EndTime__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__FollowerActivityCount__c</fullName>
        <formula>Charket__FollowerEventCount__c + Charket__FollowerMessageCount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follower Activity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__FollowerEventCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Follower Event Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__FollowerMessageCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Follower Message Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__FollowerName__c</fullName>
        <formula>IF( Charket__WeChatFollower__r.Charket__Alias__c != null, Charket__WeChatFollower__r.Charket__Alias__c, Charket__WeChatFollower__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follower Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__FollowerOpenId__c</fullName>
        <externalId>true</externalId>
        <label>Follower Open ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Charket__FollowerPhotoUrl__c</fullName>
        <formula>IF( BEGINS(Charket__WeChatFollower__r.Charket__WeChatProfilePhotoUrl__c, &apos;https&apos;) , Charket__WeChatFollower__r.Charket__WeChatProfilePhotoUrl__c ,&apos;https&apos; + RIGHT(Charket__WeChatFollower__r.Charket__WeChatProfilePhotoUrl__c, LEN(Charket__WeChatFollower__r.Charket__WeChatProfilePhotoUrl__c) - 4 ))</formula>
        <label>Follower Photo URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__HasEmailNotifiedMessages__c</fullName>
        <formula>AND(
  Charket__UnreadCount__c &gt; 0,
  AND(
     OR(
        ISBLANK(Charket__EmailNotifiedTime__c),
        Charket__LastFollowerMessageTime__c &gt; Charket__EmailNotifiedTime__c
     ),
     Charket__WeChatAgent__r.Charket__IsEmailNotificationsEnabled__c 
  ),
  OR(
     OR(
        ISBLANK(Charket__WeChatAgent__r.Charket__DNDEndTime__c),
        ISBLANK(Charket__WeChatAgent__r.Charket__DNDStartTime__c),
        !Charket__WeChatAgent__r.Charket__IsDoNotDisturbEnabled__c
     ),
     IF(
       AND(Charket__WeChatAgent__r.Charket__DNDEndTime__c != null, Charket__WeChatAgent__r.Charket__DNDEndTime__c != null),
       IF(
          VALUE(LEFT( Charket__WeChatAgent__r.Charket__DNDEndTime__c , 2) + &apos;.&apos; + RIGHT( Charket__WeChatAgent__r.Charket__DNDEndTime__c , 2))
          &gt;  VALUE(LEFT( Charket__WeChatAgent__r.Charket__DNDStartTime__c , 2) + &apos;.&apos; + RIGHT( Charket__WeChatAgent__r.Charket__DNDStartTime__c , 2)) ,
          OR(
              VALUE(MID(TEXT(NOW()), 12,2) + &apos;.&apos; + MID(TEXT(NOW()), 15,2)) &lt;
                 VALUE(LEFT( Charket__WeChatAgent__r.Charket__DNDStartTime__c , 2) + &apos;.&apos; + RIGHT( Charket__WeChatAgent__r.Charket__DNDStartTime__c , 2)),
              VALUE(MID(TEXT(NOW()), 12,2) + &apos;.&apos; + MID(TEXT(NOW()), 15,2)) &gt;
                 VALUE(LEFT( Charket__WeChatAgent__r.Charket__DNDEndTime__c , 2) + &apos;.&apos; + RIGHT( Charket__WeChatAgent__r.Charket__DNDEndTime__c , 2))
          ),
          OR(
              VALUE(MID(TEXT(NOW()), 12,2) + &apos;.&apos; + MID(TEXT(NOW()), 15,2)) &lt;
                 VALUE(LEFT( Charket__WeChatAgent__r.Charket__DNDStartTime__c , 2) + &apos;.&apos; + RIGHT( Charket__WeChatAgent__r.Charket__DNDStartTime__c , 2)),
              VALUE(MID(TEXT(NOW()), 12,2) + &apos;.&apos; + MID(TEXT(NOW()), 15,2)) &gt;
                 (VALUE(LEFT( Charket__WeChatAgent__r.Charket__DNDEndTime__c , 2) + &apos;.&apos; + RIGHT( Charket__WeChatAgent__r.Charket__DNDEndTime__c , 2)) + 1)
          )
       ),
       true
     )
  )
)</formula>
        <label>Has Email Notified Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__HasMobileNotifiedMessages__c</fullName>
        <formula>AND(
  Charket__UnreadCount__c &gt; 0,
  AND(
     OR(
        ISBLANK(Charket__MobileNotifiedTime__c),
        Charket__LastFollowerMessageTime__c &gt; Charket__MobileNotifiedTime__c
     ),
     Charket__WeChatAgent__r.Charket__IsMobileNotificationsEnabled__c 
  ),
  OR(
     OR(
        ISBLANK(Charket__WeChatAgent__r.Charket__DNDEndTime__c),
        ISBLANK(Charket__WeChatAgent__r.Charket__DNDStartTime__c),
        !Charket__WeChatAgent__r.Charket__IsDoNotDisturbEnabled__c
     ),
     IF(
       AND(Charket__WeChatAgent__r.Charket__DNDEndTime__c != null, Charket__WeChatAgent__r.Charket__DNDEndTime__c != null),
       IF(
          VALUE(LEFT( Charket__WeChatAgent__r.Charket__DNDEndTime__c , 2) + &apos;.&apos; + RIGHT(
            Charket__WeChatAgent__r.Charket__DNDEndTime__c , 2))
          &gt;  VALUE(LEFT( Charket__WeChatAgent__r.Charket__DNDStartTime__c , 2) + &apos;.&apos; + RIGHT(
            Charket__WeChatAgent__r.Charket__DNDStartTime__c , 2)),
          OR(
              VALUE(MID(TEXT(NOW()), 12,2) + &apos;.&apos; + MID(TEXT(NOW()), 15,2)) &lt;
              VALUE(LEFT( Charket__WeChatAgent__r.Charket__DNDStartTime__c , 2) + &apos;.&apos; + RIGHT(
                 Charket__WeChatAgent__r.Charket__DNDStartTime__c , 2)),
              VALUE(MID(TEXT(NOW()), 12,2) + &apos;.&apos; + MID(TEXT(NOW()), 15,2)) &gt;
              VALUE(LEFT( Charket__WeChatAgent__r.Charket__DNDEndTime__c , 2) + &apos;.&apos; + RIGHT(
                 Charket__WeChatAgent__r.Charket__DNDEndTime__c , 2))

          ),
          OR(
              VALUE(MID(TEXT(NOW()), 12,2) + &apos;.&apos; + MID(TEXT(NOW()), 15,2)) &lt;
              VALUE(LEFT( Charket__WeChatAgent__r.Charket__DNDStartTime__c , 2) + &apos;.&apos; + RIGHT(
                 Charket__WeChatAgent__r.Charket__DNDStartTime__c , 2)),
              VALUE(MID(TEXT(NOW()), 12,2) + &apos;.&apos; + MID(TEXT(NOW()), 15,2)) &gt;
                 (VALUE(LEFT( Charket__WeChatAgent__r.Charket__DNDEndTime__c , 2) + &apos;.&apos; + RIGHT(
                    Charket__WeChatAgent__r.Charket__DNDEndTime__c , 2)) + 1)
          )
       ),
       true
     )
  )
)</formula>
        <label>Has Mobile Notified Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__HasNotifiedMessages__c</fullName>
        <formula>AND(
  Charket__UnreadCount__c &gt; 0,
  OR(
    ISBLANK(Charket__AgentNotifiedTime__c),
    Charket__LastFollowerMessageTime__c &gt; Charket__AgentNotifiedTime__c
  )
)</formula>
        <label>Has Notified Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__IsClosed__c</fullName>
        <formula>if(ISPICKVAL(Charket__Status__c, &apos;Completed&apos;)||ISPICKVAL(Charket__Status__c, &apos;Missed&apos;)||ISPICKVAL(Charket__Status__c, &apos;Blocked&apos;), true, false)</formula>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__LastFollowerMessageTime__c</fullName>
        <label>Last Follower Message Time</label>
        <summarizedField>Charket__WeChatTranscriptItem__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>Charket__WeChatTranscriptItem__c.Charket__SendBy__c</field>
            <operation>equals</operation>
            <value>Follower</value>
        </summaryFilterItems>
        <summaryForeignKey>Charket__WeChatTranscriptItem__c.Charket__WeChatTranscript__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Charket__MaxResponseTimeAgent__c</fullName>
        <label>Max Response Time Agent (Seconds)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__MaxResponseTimeFollower__c</fullName>
        <label>Max Response Time Follower (Seconds)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__MobileNotifiedTime__c</fullName>
        <label>Mobile Notified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__RequestTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__StartedBy__c</fullName>
        <description>The way the chat was started: by the agent or the follower.</description>
        <label>Started By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Follower</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__UnreadCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unread Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__WaitTime__c</fullName>
        <formula>IF(ISPICKVAL(Charket__StartedBy__c,&apos;Agent&apos;), null, (Charket__StartTime__c - CreatedDate) * 24 * 60 * 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wait Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatAgent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeChat Agent</label>
        <referenceTo>Charket__WeChatAgent__c</referenceTo>
        <relationshipLabel>WeChat Transcripts</relationshipLabel>
        <relationshipName>WeChatTranscripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatFollower__c</fullName>
        <label>WeChat Follower</label>
        <referenceTo>Charket__WeChatFollower__c</referenceTo>
        <relationshipLabel>WeChat Transcripts</relationshipLabel>
        <relationshipName>WeChatTranscripts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>WeChat Transcript</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Charket__All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>WT-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WeChat Transcripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>